--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "currency.js": "^2.0.4",
+    "file-saver": "^2.0.5",
+    "httpie": "^1.1.2",
+    "vue": "^3.2.13",
+    "vue-datepicker-next": "^1.0.2",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
