--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "core-js": "^3.8.3",
+    "axios": "^1.5.1",
+    "core-js": "^3.33.0",
     "currency.js": "^2.0.4",
     "file-saver": "^2.0.5",
     "httpie": "^1.1.2",
-    "vue": "^3.2.13",
-    "vue-datepicker-next": "^1.0.2",
-    "vue-router": "^4.0.15"
+    "serve": "^14.2.1",
+    "vue": "^3.3.4",
+    "vue-datepicker-next": "^1.0.3",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "@babel/core": "^7.23.0",
+    "@babel/eslint-parser": "^7.22.15",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "eslint": "^8.50.0",
+    "eslint-plugin-vue": "^9.17.0"
   },
   "eslintConfig": {
     "root": true,
